# rustful_api

./: Cargo.toml  LICENSE  README.md  config.json  db_dump.sql
src/: delete.rs  get.rs  main.rs  patch.rs  post.rs  routes.rs
