[package]
name = "rustful_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/k-specht/rustful_api"
authors = ["Käthe Specht <xpecht@gmail.com>"]
description = "A test project demonstrating a restful api written in Rust."
categories = [ "web-programming" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
warp = "^0.3"
sqlx = { version = "^0.6", features = [ "runtime-tokio-rustls" ] }
rustract = { git = "https://github.com/k-specht/rustract", rev = "4ddec06" }
lazy_static = "*"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.48"